--- a/cathedral-town/Content/translation/cathedral/russian.json
+++ b/cathedral-town/Content/translation/cathedral/russian.json
@@ -1,5 +1,5 @@
 {
-	"building.cathedral-town.cathedral.blacksmith.description" : "Кузнец снабжает вашу армию палатками первой помощи.",
+	"building.cathedral-town.cathedral.blacksmith.description" : "Кузница снабжает вашу армию палатками первой помощи.",
 	"building.cathedral-town.cathedral.blacksmith.name" : "Кузница",
 	"building.cathedral-town.cathedral.capitol.description" : "Капитолий приносит 4000 золотых в день.",
 	"building.cathedral-town.cathedral.capitol.name" : "Капитолий",
@@ -7,32 +7,32 @@
 	"building.cathedral-town.cathedral.castle.name" : "Замок",
 	"building.cathedral-town.cathedral.citadel.description" : "Цитадель добавляет турель для защиты города и увеличивает рост существ на 50%.",
 	"building.cathedral-town.cathedral.citadel.name" : "Цитадель",
-	"building.cathedral-town.cathedral.cityHall.description" : "Ратуша позволяет покупать городские улучшения и обеспечивает доход в 2000 золотых в день.",
-	"building.cathedral-town.cathedral.cityHall.name" : "Ратуша",
-	"building.cathedral-town.cathedral.dwellingLvl1.description" : "Холм используется для вербовки служебных собак.",
-	"building.cathedral-town.cathedral.dwellingLvl1.name" : "Холм",
-	"building.cathedral-town.cathedral.dwellingLvl2.description" : "Место казни используется для вербовки убийц.",
-	"building.cathedral-town.cathedral.dwellingLvl2.name" : "Место казни",
+	"building.cathedral-town.cathedral.cityHall.description" : "Магистрат позволяет покупать городские улучшения и обеспечивает доход в 2000 золотых в день.",
+	"building.cathedral-town.cathedral.cityHall.name" : "Магистрат",
+	"building.cathedral-town.cathedral.dwellingLvl1.description" : "Курган используется для вербовки служебных собак.",
+	"building.cathedral-town.cathedral.dwellingLvl1.name" : "Курган",
+	"building.cathedral-town.cathedral.dwellingLvl2.description" : "Гильотина используется для вербовки пыточников.",
+	"building.cathedral-town.cathedral.dwellingLvl2.name" : "Гильотина",
 	"building.cathedral-town.cathedral.dwellingLvl3.description" : "Гильдия Охотников используется для вербовки охотников на ведьм.",
 	"building.cathedral-town.cathedral.dwellingLvl3.name" : "Гильдия Охотников",
-	"building.cathedral-town.cathedral.dwellingLvl4.description" : "Свалка используется для вербовки Коатлей.",
+	"building.cathedral-town.cathedral.dwellingLvl4.description" : "Свалка используется для вербовки химер.",
 	"building.cathedral-town.cathedral.dwellingLvl4.name" : "Свалка",
-	"building.cathedral-town.cathedral.dwellingLvl5.description" : "Зрелищный зал используется для набора пономарей.",
-	"building.cathedral-town.cathedral.dwellingLvl5.name" : "Зрелищный зал",
+	"building.cathedral-town.cathedral.dwellingLvl5.description" : "Школа инквизиции используется для набора пономарей.",
+	"building.cathedral-town.cathedral.dwellingLvl5.name" : "Школа инквизиции",
 	"building.cathedral-town.cathedral.dwellingLvl6.description" : "Орден тамплиеров используется для вербовки тамплиеров.",
 	"building.cathedral-town.cathedral.dwellingLvl6.name" : "Орден тамплиеров",
-	"building.cathedral-town.cathedral.dwellingLvl7.description" : "Проклятая святыня используется для вербовки карателей.",
+	"building.cathedral-town.cathedral.dwellingLvl7.description" : "Проклятое святилище используется для вербовки карателей.",
 	"building.cathedral-town.cathedral.dwellingLvl7.name" : "Проклятая святыня",
-	"building.cathedral-town.cathedral.dwellingUpLvl1.description" : "Холм используется для набора патрулей.",
-	"building.cathedral-town.cathedral.dwellingUpLvl1.name" : "ул. Холм",
-	"building.cathedral-town.cathedral.dwellingUpLvl2.description" : "Место казни используется для вербовки палачей.",
-	"building.cathedral-town.cathedral.dwellingUpLvl2.name" : "ул. Место казни",
-	"building.cathedral-town.cathedral.dwellingUpLvl3.description" : "Гильдия Охотников используется для вербовки Охотников на Зло.",
+	"building.cathedral-town.cathedral.dwellingUpLvl1.description" : "Курган используется для набора патрулей.",
+	"building.cathedral-town.cathedral.dwellingUpLvl1.name" : "ул. Курган",
+	"building.cathedral-town.cathedral.dwellingUpLvl2.description" : "Гильотина используется для вербовки палачей.",
+	"building.cathedral-town.cathedral.dwellingUpLvl2.name" : "ул. Гильотина",
+	"building.cathedral-town.cathedral.dwellingUpLvl3.description" : "Гильдия Охотников используется для вербовки истребителей нечисти.",
 	"building.cathedral-town.cathedral.dwellingUpLvl3.name" : "ул. Гильдия охотников",
-	"building.cathedral-town.cathedral.dwellingUpLvl4.description" : "Свалка используется для вербовки Кровавых Коатлей.",
+	"building.cathedral-town.cathedral.dwellingUpLvl4.description" : "Свалка используется для вербовки свирепых химер.",
 	"building.cathedral-town.cathedral.dwellingUpLvl4.name" : "ул. Свалка",
-	"building.cathedral-town.cathedral.dwellingUpLvl5.description" : "Аудитория используется для набора канторов.",
-	"building.cathedral-town.cathedral.dwellingUpLvl5.name" : "ул. Зрелищный зал",
+	"building.cathedral-town.cathedral.dwellingUpLvl5.description" : "Школа инквизиции используется для набора инвизиторов.",
+	"building.cathedral-town.cathedral.dwellingUpLvl5.name" : "ул. Школа инквизиции",
 	"building.cathedral-town.cathedral.dwellingUpLvl6.description" : "Орден тамплиеров используется для вербовки тёмных тамплиеров.",
 	"building.cathedral-town.cathedral.dwellingUpLvl6.name" : "ул. Орден тамплиеров",
 	"building.cathedral-town.cathedral.dwellingUpLvl7.description" : "Проклятая святыня используется для вербовки мстителей.",
@@ -41,14 +41,14 @@
 	"building.cathedral-town.cathedral.fort.name" : "Форт",
 	"building.cathedral-town.cathedral.grail.description" : "Свет Правосудия увеличивает еженедельное производство существ на 50 процентов и дает 5000 золота в день. И это позволяет 7 шахт (для всех категорий ресурсов) для вашего королевства. Это также увеличивает силу героев защиты на 5.",
 	"building.cathedral-town.cathedral.grail.name" : "Свет Правосудия",
-	"building.cathedral-town.cathedral.horde1.description" : "Камера пыток увеличивает еженедельное производство убийц на 6 в неделю.",
+	"building.cathedral-town.cathedral.horde1.description" : "Камера пыток увеличивает еженедельное производство пыточников на 6 в неделю.",
 	"building.cathedral-town.cathedral.horde1.name" : "Камера пыток",
-	"building.cathedral-town.cathedral.horde1Upgr.description" : "Камера пыток увеличивает еженедельное производство Инфорсеров на 6 в неделю.",
+	"building.cathedral-town.cathedral.horde1Upgr.description" : "Камера пыток увеличивает еженедельное производство палачей на 6 в неделю.",
 	"building.cathedral-town.cathedral.horde1Upgr.name" : "Камера пыток",
-	"building.cathedral-town.cathedral.horde2.description" : "Хоровое отделение увеличивает еженедельное производство пономарей на 2 в неделю.",
-	"building.cathedral-town.cathedral.horde2.name" : "Хоровое отделение",
-	"building.cathedral-town.cathedral.horde2Upgr.description" : "Хоровой факультет увеличивает еженедельное количество канторов на 2 человека в неделю.",
-	"building.cathedral-town.cathedral.horde2Upgr.name" : "Хоровой факультет",
+	"building.cathedral-town.cathedral.horde2.description" : "Хоровая секта увеличивает еженедельное производство пономарей на 2 в неделю.",
+	"building.cathedral-town.cathedral.horde2.name" : "Хоровая секта",
+	"building.cathedral-town.cathedral.horde2Upgr.description" : "Хоровая секта увеличивает еженедельное количество инквизиторов на 2 человека в неделю.",
+	"building.cathedral-town.cathedral.horde2Upgr.name" : "Хоровая секта",
 	"building.cathedral-town.cathedral.mageGuild1.description" : "Гильдия магов позволяет вашим героям изучать хранящиеся в ней заклинания.",
 	"building.cathedral-town.cathedral.mageGuild1.name" : "1 этаж гильдии магов",
 	"building.cathedral-town.cathedral.mageGuild2.description" : "Гильдия магов позволяет вашим героям изучать хранящиеся в ней заклинания.",
@@ -73,34 +73,34 @@
 	"building.cathedral-town.cathedral.tavern.name" : "Таверна",
 	"building.cathedral-town.cathedral.townHall.description" : "Ратуша района позволяет покупать расширения города и приносит доход в размере 1000 золотых в день.",
 	"building.cathedral-town.cathedral.townHall.name" : "Ратуша",
-	"building.cathedral-town.cathedral.villageHall.description" : "Муниципалитет позволяет покупать расширения города и приносит 500 золотых в день.",
-	"building.cathedral-town.cathedral.villageHall.name" : "Муниципалитет",
+	"building.cathedral-town.cathedral.villageHall.description" : "Сельская управа позволяет покупать расширения города и приносит 500 золотых в день.",
+	"building.cathedral-town.cathedral.villageHall.name" : "Сельская управа",
 	"creatures.cathedral-town.cthAttackDog.name.plural" : "Собаки-ищейки",
 	"creatures.cathedral-town.cthAttackDog.name.singular" : "Собака-ищейка",
-	"creatures.cathedral-town.cthBloodyCouatl.name.plural" : "Кровавые Коатли",
-	"creatures.cathedral-town.cthBloodyCouatl.name.singular" : "Кровавый коатль",
-	"creatures.cathedral-town.cthCantor.name.plural" : "Канторы",
-	"creatures.cathedral-town.cthCantor.name.singular" : "Кантор",
+	"creatures.cathedral-town.cthBloodyCouatl.name.plural" : "Свирепые химеры",
+	"creatures.cathedral-town.cthBloodyCouatl.name.singular" : "Свирепая химера",
+	"creatures.cathedral-town.cthCantor.name.plural" : "Инквизиторы",
+	"creatures.cathedral-town.cthCantor.name.singular" : "Инквизитор",
 	"creatures.cathedral-town.cthChasteners.name.plural" : "Каратели",
 	"creatures.cathedral-town.cthChasteners.name.singular" : "Каратель",
-	"creatures.cathedral-town.cthCouatl.name.plural" : "Коатли",
-	"creatures.cathedral-town.cthCouatl.name.singular" : "Коатль",
-	"creatures.cathedral-town.cthEvilHunter.name.plural" : "Дьявольские охотники",
-	"creatures.cathedral-town.cthEvilHunter.name.singular" : "Дьявольский охотник",
-	"creatures.cathedral-town.cthExecutioner.name.plural" : "Инфорсеры",
-	"creatures.cathedral-town.cthExecutioner.name.singular" : "Инфорсер",
-	"creatures.cathedral-town.cthHound.name.plural" : "Патрули",
-	"creatures.cathedral-town.cthHound.name.singular" : "Патруль",
+	"creatures.cathedral-town.cthCouatl.name.plural" : "Химеры",
+	"creatures.cathedral-town.cthCouatl.name.singular" : "Химера",
+	"creatures.cathedral-town.cthEvilHunter.name.plural" : "Истребители нечисти",
+	"creatures.cathedral-town.cthEvilHunter.name.singular" : "Истребители нечисти",
+	"creatures.cathedral-town.cthExecutioner.name.plural" : "Палачи",
+	"creatures.cathedral-town.cthExecutioner.name.singular" : "Палач",
+	"creatures.cathedral-town.cthHound.name.plural" : "Патрульные",
+	"creatures.cathedral-town.cthHound.name.singular" : "Патрульный",
 	"creatures.cathedral-town.cthPaladin.name.plural" : "Темные тамплиеры",
 	"creatures.cathedral-town.cthPaladin.name.singular" : "Темный тамплиер",
 	"creatures.cathedral-town.cthPunisher.name.plural" : "Мстители",
 	"creatures.cathedral-town.cthPunisher.name.singular" : "Мститель",
 	"creatures.cathedral-town.cthSexton.name.plural" : "Сектанты",
 	"creatures.cathedral-town.cthSexton.name.singular" : "Сектант",
-	"creatures.cathedral-town.cthSlayer.name.plural" : "Убийцы",
-	"creatures.cathedral-town.cthSlayer.name.singular" : "Убийца",
+	"creatures.cathedral-town.cthSlayer.name.plural" : "Пыточники",
+	"creatures.cathedral-town.cthSlayer.name.singular" : "Пыточник",
 	"creatures.cathedral-town.cthTemplar.name.plural" : "Тамплиеры",
-	"creatures.cathedral-town.cthTemplar.name.singular" : "тамплиер",
+	"creatures.cathedral-town.cthTemplar.name.singular" : "Тамплиер",
 	"creatures.cathedral-town.cthWitchHunter.name.plural" : "Охотники на ведьм",
 	"creatures.cathedral-town.cthWitchHunter.name.singular" : "Охотник на ведьм",
 	"creatures.cathedral-town.saRedFanatic.name.plural" : "Красные фанатики",
@@ -138,14 +138,14 @@
 	"hero.cathedral-town.helena.specialty.tooltip" : "+350 золота ежедневно",
 	"hero.cathedral-town.kasumi.biography" : "Кабальеро — гнолл, ранее бывший Стражем короля Тароссика. После неудавшейся попытки убийства он был сослан в деревянную деревню, где подвергся вторжению нежити и пострадал от чумы и стихийных бедствий. Теперь он становится членом церкви и начинает новую жизнь.",
 	"hero.cathedral-town.kasumi.name" : "Кабальеро",
-	"hero.cathedral-town.kasumi.specialty.description" : "{Убийца}\r\n\r\nУвеличивает скорость всех Истребителей и Инфорсеров на 1, а их навыки атаки и защиты на 5% за каждые 2 уровня (округляется в большую сторону).",
-	"hero.cathedral-town.kasumi.specialty.name" : "Убийца",
-	"hero.cathedral-town.kasumi.specialty.tooltip" : "Бонус: Убийца",
+	"hero.cathedral-town.kasumi.specialty.description" : "{Пыточники}\r\n\r\nУвеличивает скорость всех пыточников и палачей на 1, а их навыки атаки и защиты на 5% за каждые 2 уровня (округляется в большую сторону).",
+	"hero.cathedral-town.kasumi.specialty.name" : "Пыточники",
+	"hero.cathedral-town.kasumi.specialty.tooltip" : "Бонус существ: Пыточники",
 	"hero.cathedral-town.nariko.biography" : "Леонор заболела этой болезнью только тогда, когда ей было девять лет. Она оставалась дома без воды почти 5 дней, пока ее не спас священник и не отвел в церковь. Она по-прежнему предполагает, что мужчина, который ее спас, на самом деле ангел. Теперь из-за этой непоколебимой веры она становится все более набожной, даже фанатичной.",
 	"hero.cathedral-town.nariko.name" : "Леонор",
-	"hero.cathedral-town.nariko.specialty.description" : "{Коатли}\r\n\r\nУвеличивает скорость всех Коатлей и Кровавых Коатлей на 1, а их навыки атаки и защиты на 5% за каждые 4 уровня (округляется в большую сторону).",
-	"hero.cathedral-town.nariko.specialty.name" : "Коатли",
-	"hero.cathedral-town.nariko.specialty.tooltip" : "Бонус: Коатли",
+	"hero.cathedral-town.nariko.specialty.description" : "{Химеры}\r\n\r\nУвеличивает скорость всех химер и свирепых химер на 1, а их навыки атаки и защиты на 5% за каждые 4 уровня (округляется в большую сторону).",
+	"hero.cathedral-town.nariko.specialty.name" : "Химеры",
+	"hero.cathedral-town.nariko.specialty.tooltip" : "Бонус: Химеры",
 	"hero.cathedral-town.noli.biography" : "Натаниэль известен своим высокомерием. Он присоединился к Церкви, когда потерпел поражение от некромантов при защите Скрижали Эрафии. Теперь пришло время мести!",
 	"hero.cathedral-town.noli.name" : "Натаниэль",
 	"hero.cathedral-town.noli.specialty.description" : "{Кузнец}\r\n\r\nПолучает 5% бонус за уровень навыка Кузнечное дело.",
@@ -153,7 +153,7 @@
 	"hero.cathedral-town.noli.specialty.tooltip" : "Бонус кузнеца (бесполезен)",
 	"hero.cathedral-town.patricia.biography" : "Лусеро без ума от охоты на гарпий и медуз. Она любит собирать с трупов кости, черепа или другие «сувениры». Охота — ее хобби, даже если ее никто для этого не наймет.",
 	"hero.cathedral-town.patricia.name" : "Лусеро",
-	"hero.cathedral-town.patricia.specialty.description" : "{Охотники на ведьм}\r\n\r\nErhöht die Geschwindigkeit von Hexenjägern und Bösen Jägern um 1 und ihre Angriffs- und Verteidigungsfähigkeiten um 5% für jeweils 3 Stufen (aufgerundet)..",
+	"hero.cathedral-town.patricia.specialty.description" : "{Охотники на ведьм}\r\n\r\nУвеличивает скорость охотников на ведьм и истребителей нечисти на 1, а их атакующие и защитные способности на 5% за каждые 3 уровня (округляется в большую сторону).",
 	"hero.cathedral-town.patricia.specialty.name" : "Охотники на ведьм",
 	"hero.cathedral-town.patricia.specialty.tooltip" : "Бонус: Охотники на ведьм",
 	"hero.cathedral-town.ranin.biography" : "Фон Фредрих был мэром разрушенного города. Он пережил катастрофу, но его жена и трое детей были убиты нежитью. Он до сих пор каждый день исповедуется в часовне, хотя катастрофа случилась много лет назад. Он считает, что свой грех должен искупить он сам.",
@@ -188,7 +188,7 @@
 	"hero.cathedral-town.amanda.specialty.tooltip" : "Бонус: -1 боевой дух",
 	"hero.cathedral-town.tarinus.biography" : "После катастрофы Паленсия стал фанатиком. Даже если раньше она была всего лишь ученицей священнослужителя. Она увидела, что ее одноклассники погибли в катастрофе, поэтому решила бороться за себя. Теперь она стала верховной жрицей церкви.",
 	"hero.cathedral-town.tarinus.name" : "Паленсия",
-	"hero.cathedral-town.tarinus.specialty.description" : "{Сектанты}\r\n\r\nУвеличивает скорость пономарей и канторов на 1, а их навыки атаки и защиты на 5% за каждые 5 уровней (округляется в большую сторону)..",
+	"hero.cathedral-town.tarinus.specialty.description" : "{Сектанты}\r\n\r\nУвеличивает скорость сектантов и инквизиторов на 1, а их навыки атаки и защиты на 5% за каждые 5 уровней (округляется в большую сторону)..",
 	"hero.cathedral-town.tarinus.specialty.name" : "Сектанты",
 	"hero.cathedral-town.tarinus.specialty.tooltip" : "Бонус: Сектанты",
 	"hero.cathedral-town.volh.biography" : "Лучший друг Жана Сезара погиб в катастрофе. Это изменило сердце человека, который раньше был очень набожным. С тех пор он становился все более безумным и недоступным. Люди говорили, что его мстительные намерения уже уничтожили его оставшееся добродушие.",
@@ -209,11 +209,12 @@
 	"spell.cathedral-town.redeem.name" : "Выкуп",
 	"spell.cathedral-town.scratch.name" : "Царапины",
 	"spell.cathedral-town.temPrayer.name" : "Небесный свет",
-    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel1.name": "Холм",
-    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel2.name": "Место казни",
+    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel1.name": "Курган",
+    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel2.name": "Гильотина",
     "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel3.name": "Гильдия Охотников",
     "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel4.name": "Свалка",
-    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel5.name": "Зрелищный зал",
+    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel5.name": "Школа инквизиции",
     "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel6.name": "Орден Тамплиеров",
-    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel7.name": "Проклятая святыня"
+    "mapObject.cathedral-town.creatureGeneratorCommon.cathedralLevel7.name": "Проклятое святилище"
 }
+
